--- a/CrashLoyal/CrashLoyal.vcxproj
+++ b/CrashLoyal/CrashLoyal.vcxproj
@@ -29,8 +29,9 @@
     <ClInclude Include="src\Building.h" />
     <ClInclude Include="src\GameState.h" />
     <ClInclude Include="src\Mob.h" />
+    <ClInclude Include="src\Mob_Archer.h" />
     <ClInclude Include="src\Point.h" />
-    <ClInclude Include="src\Swordsman.h" />
+    <ClInclude Include="src\Mob_Swordsman.h" />
     <ClInclude Include="src\Waypoint.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
