--- a/CrashLoyal/CrashLoyal.vcxproj.filters
+++ b/CrashLoyal/CrashLoyal.vcxproj.filters
@@ -2,32 +2,50 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="src\GameState.cpp" />
-    <ClCompile Include="src\Building.cpp" />
     <ClCompile Include="src\CrashLoyal.cpp" />
     <ClCompile Include="src\Mob.cpp">
-      <Filter>Mobs</Filter>
+      <Filter>Entities</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Building.cpp">
+      <Filter>Entities</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Entity.cpp">
+      <Filter>Entities</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\GameState.h" />
-    <ClInclude Include="src\Point.h" />
-    <ClInclude Include="src\Waypoint.h" />
-    <ClInclude Include="src\Building.h" />
     <ClInclude Include="src\Mob.h">
-      <Filter>Mobs</Filter>
+      <Filter>Entities</Filter>
     </ClInclude>
     <ClInclude Include="src\Mob_Swordsman.h">
-      <Filter>Mobs</Filter>
+      <Filter>Entities</Filter>
     </ClInclude>
     <ClInclude Include="src\Mob_Archer.h">
-      <Filter>Mobs</Filter>
+      <Filter>Entities</Filter>
     </ClInclude>
-    <ClInclude Include="src\Attackable.h">
-      <Filter>Mobs</Filter>
+    <ClInclude Include="src\Singleton.h">
+      <Filter>Infrastructure</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Constants.h" />
+    <ClInclude Include="src\Building.h">
+      <Filter>Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Entity.h">
+      <Filter>Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Vec2.h">
+      <Filter>Infrastructure</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Waypoint.h">
+      <Filter>Infrastructure</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Filter Include="Mobs">
+    <Filter Include="Infrastructure">
+      <UniqueIdentifier>{291c579b-61c3-41cb-b5b1-6b16281627f3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Entities">
       <UniqueIdentifier>{7a953e00-6a20-49d7-b381-b0d82cbdcb20}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
