Added in new graphics object

--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="src\CrashLoyal.cpp" />
     <ClCompile Include="src\Entity.cpp" />
     <ClCompile Include="src\Game.cpp" />
+    <ClCompile Include="src\Graphics.cpp" />
     <ClCompile Include="src\Mob.cpp" />
     <ClCompile Include="src\Player.cpp" />
   </ItemGroup>
@@ -30,6 +31,7 @@
     <ClInclude Include="src\Entity.h" />
     <ClInclude Include="src\Building.h" />
     <ClInclude Include="src\Game.h" />
+    <ClInclude Include="src\Graphics.h" />
     <ClInclude Include="src\Mob.h" />
     <ClInclude Include="src\Player.h" />
     <ClInclude Include="src\Waypoint.h" />
