Entities data is exposed in the interface, so the AI can know what entities exist, health, etc.

--- a/Interface/Interface.vcxproj.filters
+++ b/Interface/Interface.vcxproj.filters
@@ -5,13 +5,12 @@
     <ClInclude Include="src\Vec2.h" />
     <ClInclude Include="src\Constants.h" />
     <ClInclude Include="src\iPlayer.h" />
-
     <ClInclude Include="src\iController.h" />
     <ClInclude Include="src\EntityStats.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Vec2.cpp" />
-
     <ClCompile Include="src\EntityStats.cpp" />
+    <ClCompile Include="src\iPlayer.cpp" />
   </ItemGroup>
 </Project>
